<resources>
    <string name="app_name">Pezry</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="projects">Projects</string>
    <string name="mytasks">My Tasks</string>
    <string name="chat">Chat</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="please_enter_new_password">Please enter new password</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="users">Members</string>
    <string name="project_name"><u>Project name</u><font color='#FF0000'>*</font></string>
    <string name="email"><u>Email</u><font color='#FF0000'>*</font></string>
    <string name="task_name">Task name<font color='#FF0000'>*</font></string>
    <string name="start_date"><u>Start date</u><font color='#FF0000'>*</font></string>
    <string name="group_chat_name">Group chat name<font color='#FF0000'>*</font></string>
    <string name="process"><u>Process</u><font color='#FF0000'>*</font></string>
    <string name="description"><u>Description</u></string>
    <string name="issue_type"><u>Issue type</u><font color='#FF0000'>*</font></string>
    <string name="priority"><u>Priority</u><font color='#FF0000'>*</font></string>
    <string name="assignee"><u>Assignee</u><font color='#FF0000'>*</font></string>
    <string name="issue_name"><u>Issue name</u><font color='#FF0000'>*</font></string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="estimate_execution_time"><u>Estimate execution time</u></string>
    <string name="finish_date"><u>Finish date</u></string>
    <string name="project_estimated_finsish_date"><u>Project estimated finsish date</u><font color='#FF0000'>*</font></string>
    <string name="project_description"><u>Project description</u></string>
    <string name="project_type"><u>Project type</u><font color='#FF0000'>*</font></string>
    <string name="no_result_found">No result found</string>
    <string name="start_date_2"><u>Start date</u></string>
    <string name="estimate_finish_date"><u>Estimate finish date</u></string>
    <string name="estimate_finish_date_2"><u>Estimate finish date</u><font color='#FF0000'>*</font></string>
    <string name="username"><u>UserName</u><font color='#FF0000'>*</font></string>
    <string name="password"><u>Password</u><font color='#FF0000'>*</font></string>
    <string name="confirm_password"><u>Confirm Password</u><font color='#FF0000'>*</font></string>
    <string name="default_notification_channel_id">abc</string>
    <string name="position"><u>Position</u><font color='#FF0000'>*</font></string>
    <string name="project_leader"><u>Project Leader</u><font color='#FF0000'>*</font></string>
    <string name="total_issue">Total issue:</string>
    <string name="project">Project</string>
    <string name="issueName">Issue Name</string>
    <string name="priorities">Priority</string>
    <string name="issueType">Issue Type</string>
    <string name="personal_working_efficiency">Personal Working Efficiency</string>
    <string name="project_issues">Project Issues</string>
    <string name="personal_issues">Personal Issues</string>
    <string name="email_profile">Email:</string>
    <string name="gender_profile">Gender:</string>
    <string name="phone_profile">Phone:</string>
    <string name="day_of_birth_profile">Day of birth:</string>
    <string name="address_profile">Address:</string>
    <string name="account_profile">Account</string>
    <string name="privacy_profile">Privacy</string>
    <string name="help_center_profile">Help center</string>
    <string name="about_us_profile">About us</string>
    <string name="log_out_profile">Log out</string>
    <string name="confirm_profile">Confirm</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="setting">Setting</string>
    <string name="delete_group">Delete Group</string>
    <string name="add_member">Add Member</string>
    <string name="enter_member_email">Enter Member\'s email</string>
    <string name="participant">Participant</string>
    <string name="invite">Invite</string>
    <string name="create_group_chat">Create Group Chat</string>
    <string name="enter_group_chat_name">Enter Project\'s name</string>
    <string name="create">Create</string>
    <string name="create_issue">Create Issue</string>
    <string name="create_new_password">Create New Password</string>
    <string name="enter_password_create">Enter password:</string>
    <string name="enter_new_password_create">Enter new password:</string>
    <string name="create_task">Create Task</string>
    <string name="enter_task_name">Enter task name</string>
    <string name="enter_decription">Enter decription</string>
    <string name="create_project">Create Project</string>
    <string name="enter_project_description">Enter Project\'s description</string>
    <string name="enter_project_finish_date">Enter Project\'s finish date</string>
    <string name="search_groupchat">Search GroupChat</string>
    <string name="enter_email">Enter email</string>
    <string name="login">Login</string>
    <string name="search_member">Search Member</string>
    <string name="position_user">Position:</string>
    <string name="search_project">Search Project</string>
    <string name="enter_username">Enter username</string>
    <string name="signup">SignUp</string>
    <string name="working_efficiency">Working Efficiency</string>
    <string name="accept">Accept</string>
    <string name="denied">denied</string>
    <string name="seen">Seen</string>
    <string name="number">Number</string>
    <string name="register">Register</string>
    <string name="dashboard">Dashboard</string>
    <string name="statistic">Statistic</string>
    <string name="todo_title">ToDo</string>
    <string name="inprogress_title">InProgress</string>
    <string name="done_title">Done</string>
    <string name="todo">ToDo</string>
    <string name="inprogress">InProgress</string>
    <string name="done">Done</string>
    <string name="task">Task</string>
    <string name="bug">Bug</string>
    <string name="story">Story</string>
    <string name="high">High</string>
    <string name="medium">Medium</string>
    <string name="low">Low</string>
    <string name="mydashboard">My Dashboard</string>
    <string name="schedule">Schedule</string>
    <string name="myallissues">My All Issues</string>
    <string name="process2">Process</string>
    <string name="all_issues">All Issues</string>
    <string name="issues_in_todo">Issues in Todo Process</string>
    <string name="issues_in_inprogress">Issues in InProgress Process</string>
    <string name="issues_in_done">Issues in Done Process</string>
    <string name="issues_complete_perfromance">Issues Complete Performance</string>
    <string name="perfectissues">Perfect Issues</string>
    <string name="delayissues">Delay Issues</string>
    <string name="allissuesbyprocess">All Issues By Process Type</string>
    <string name="issues_list">Issues List</string>
    <string name="pezry_app_name">PEZRY</string>
    <string name="joining_request">Joining Request</string>
    <string name="issue_request">Issue Request</string>
    <string name="issue_today">Issue Today</string>
    <string name="adding_member">Adding user...</string>
    <string name="enterEmailMember">Please enter Email\'s user!!!</string>
    <string name="enterPosition">Please enter position!!!!</string>
    <string name="checkError">Please check error!!!</string>
    <string name="wrongEmail">Wrong email!!!</string>
    <string name="wrongFormat">Wrong format!!! Please try again</string>
    <string name="user_already">User already in the group!!!</string>
    <string name="enter_GroupName">Please enter GroupChat\'s name!!!</string>
    <string name="create_success">Create success</string>
    <string name="create_failed">Create failed</string>
    <string name="failed">Failed</string>
    <string name="select_Img">Please select image</string>
    <string name="enterIssueName">Please enter issue name!!!</string>
    <string name="enterEstimateFinishDate">Please enter estimate finish date!!!</string>
    <string name="wrong_finish_day">Wrong finish day!!!</string>
    <string name="enterStartDate">Please enter start date!!!</string>
    <string name="enterFinishDate">Please enter finish date!!!!</string>
    <string name="create_error">Create error!!!</string>
    <string name="create_issue_question">Do you want to create this issue?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="wrong_date">Wrong day!!!</string>
    <string name="wrongFormat2">Wrong format!!! Ex: dd/MM/yyyy</string>
    <string name="wrong_start_date">Wrong start day!!!</string>
    <string name="enterPassword">Please enter password!!!</string>
    <string name="pass_6_char">Password must be more than 6 characters!!!</string>
    <string name="wrong_password">Wrong password!!!</string>
    <string name="enterNewPass">Please enter new password!!!</string>
    <string name="change_pass_succes">Change password success</string>
    <string name="create_new_pass_question">Do you want to create new password?</string>
    <string name="duplicate_pass">Duplicate password</string>
    <string name="enterProjectName">Please enter Project\'s name!!!</string>
    <string name="creating_project">Creating...</string>
    <string name="cancel_create">Cancel create</string>
    <string name="create_project_question">\"Do you want to create project: \"</string>
    <string name="update_success">Update success</string>
    <string name="update_failed">Update failed</string>
    <string name="update_error">Update error!!!</string>
    <string name="update_issue_done">Update Issue is done success!!!</string>
    <string name="confim_issue_complete_question">Would you like to confirm this issue is complete?</string>
    <string name="confirm">Confirm</string>
    <string name="delete_issue_question">Would you like to delete this issue?</string>
    <string name="delete_issue_success">Delete Issue success</string>
    <string name="watiing_for_login">Waiting for login...</string>
    <string name="login_success">Login success</string>
    <string name="enterEmail">Please enter Email!!!</string>
    <string name="enterCorrectEmailFormat">Incorrect Email format!!!</string>
    <string name="login_failed">Login failed</string>
    <string name="success">Success</string>
    <string name="wrong_day">Wrong day!!! Please try again</string>
    <string name="enterUserName">Please enter username!!!</string>
    <string name="enterPhone">Please enter phone number!!!</string>
    <string name="enterDOB">Please enter day of birth!!!</string>
    <string name="updating">Updating...</string>
    <string name="cancel_update">Cancel update</string>
    <string name="save_changes_question">Do you want to save changes?</string>
    <string name="uploading">Uploading...</string>
    <string name="no_img_selected">No image selected</string>
    <string name="upload_into_DB">Upload into database</string>
    <string name="delete_project_question">Are you sure to delete this project?</string>
    <string name="deleting">Deleting...</string>
    <string name="waiting">Waiting...</string>
    <string name="enterNameUser">Please enter User name!!!</string>
    <string name="incorrect_pass">Incorrect password!!!</string>
    <string name="enterConfirmPass">Please enter confirm password!!!</string>
    <string name="wrong_estimate_finish_date">wrong estimate finish date</string>
</resources>