<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp"
    tools:context=".View.Fragment.CreateGroupChatFragment">

    <ScrollView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/custom_dialog_fragment">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/avatar_group_chat"
                android:layout_width="96dp"
                android:layout_height="101dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:src="@drawable/blueprint"
                app:civ_border_width="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView11" />

            <ImageButton
                android:id="@+id/ibtn_choose_avatar_group_chat"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="116dp"
                android:layout_marginEnd="80dp"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:focusable="true"
                android:scaleType="fitCenter"
                android:src="@drawable/add_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/create_group_chat"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/avatar_group_chat">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/group_chat_name"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/create_group_chat_name_text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:gravity="center"
                    app:hintEnabled="false"
                    app:errorEnabled="false">

                    <EditText
                        android:id="@+id/edt_create_group_chat_name"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/custom_edt"
                        android:hint="@string/enter_group_chat_name"
                        android:maxLines="1"
                        android:padding="10dp"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btn_create_group_chat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="32dp"
                android:text="@string/create"
                android:background="@drawable/custom_btn"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />

            <Button
                android:id="@+id/btn_cancel_create_group_chat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/custom_btn"
                android:text="@string/cancel"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</FrameLayout>