<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Fragment.PersonalStactisticFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_Personal_Issue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/personal_issues"
                android:padding="5dp"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/spinner_issue_process_personal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:popupBackground="@android:color/transparent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_Personal_Issue"
                tools:listitem="@layout/item_process" />

            <TextView
                android:id="@+id/tv_name_bar_chart_personal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Bar chart"
                android:padding="5dp"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner_issue_process_personal" />

            <TextView
                android:id="@+id/textView_number_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:padding="2dp"
                android:text="@string/number"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_name_bar_chart_personal"/>

            <com.github.mikephil.charting.charts.BarChart
                android:id="@+id/barChart_personal_issues"
                android:layout_width="match_parent"
                android:layout_height="550dp"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_name_bar_chart_personal" />

            <TextView
                android:id="@+id/tv_personal_working_efficiency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/personal_working_efficiency"
                android:layout_marginTop="16dp"
                android:padding="5dp"
                android:gravity="center"
                android:textSize="22sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/barChart_personal_issues" />

            <TextView
                android:id="@+id/tv_name_pie_chart_personal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Pie chart"
                android:padding="5dp"
                android:gravity="center"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_personal_working_efficiency" />

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/pieChart_personal_working_efficiency"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_name_pie_chart_personal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</FrameLayout>