<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="5dp"
    tools:context=".View.Fragment.MemberDetailProjectFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_dialog_fragment"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/ibtn_back_member_detail"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:layout_marginStart="32dp"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/cancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar_member_detail"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:src="@drawable/profile_1"
            app:civ_border_width="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_username_member_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:maxLines="1"
            android:text="User Name"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/avatar_member_detail" />

        <LinearLayout
            android:id="@+id/email_member_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="54dp"
            android:background="@drawable/custom_edt"
            android:gravity="left"
            android:orientation="horizontal"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/avatar_member_detail">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:maxLines="1"
                android:text="@string/email_profile"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_email_member_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="abc@gmail.com"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:visibility="visible" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/phoneNumber_member_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="left"
            android:orientation="horizontal"
            android:background="@drawable/custom_edt"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_member_detail">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:maxLines="1"
                android:text="@string/phone_profile"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_phoneNumber_member_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="0942738183"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/position_member_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="left"
            android:orientation="horizontal"
            android:background="@drawable/custom_edt"
            android:padding="5dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneNumber_member_detail">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/position_user"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phoneNumber_member_detail" />

            <TextView
                android:id="@+id/tv_position_member_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:padding="5dp"
                android:text="Developer"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/position_member_detail_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:gravity="center"
                android:visibility="gone"
                app:hintEnabled="true">

                <EditText
                    android:id="@+id/edt_position_member_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_edt"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:text="Developer"
                    android:textSize="20sp" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/btn_confirm_update_member"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:background="@drawable/custom_btn"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/confirm_profile"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/position_member_detail" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>